@startuml

left to right direction

skinparam nodesep 90

package "DomainClassDiagram"  {

    abstract class Utilisateur {
        nom : string
        prenom : string
        email : string
        numeroDeTelephone : int
        adresse : Adresse
    }

    class Livreur {
        UrlPhotoPermisConduire : string
        pizzeria : Pizzeria
        totaleLivraisonEffectuee : int
    }

    class Pizzaiolo {
        pizzeria : Pizzeria
        totaleCommandePreparee : int
    }

    class Responsable {
    }

    class ResponsablePrivilegie {
    }

    class Client {
    }

    class CarteCredit {
        numero : int
        moisExpiration : int
        anneeExpiration : int
        nomProprietaire : string
    }

    class Panier {
        prixTotal : float
        nombrePizza : int
    }

    class Adresse {
        pays : string
        codePostal : string
        ville : string
        rue : string
        teritoire : string
        numBatiment : int
    }

    class Commande {
        numero : int
        dateHeure : DateTime
        pizzeria : Pizzeria
        prixTTC : float
        prixHT : float
        quantite : int
        etat : enum
        prepareePar : Pizzaiolo
    }

    class Pizza {
        nom : string
        description : string
        prix : float
    }

    class AideMemoire {
        nom : string
        contenu : string
    }

    class Ingredient {
        nom : string
        description : string
    }

    class Livraison {
        dateHeure : DateTime
        etat : enum
        instruction : string
    }

    class Pizzeria {
        tauxTax : float
        nombreEmployee : int
        adresse : Adresse
    }

    class JourOuvrable {
        jour : string
        heureOuverture : int
        heureFermeture : int
    }

    class ImagePizza {
        url : string
    }

    class ElementPanier {
    }

    class LigneCommande {

    }

    abstract class PizzaQuantifiable {
        quantite : int
        prixTotal : float
        prixUnitaire : float
    }

    Pizza "*" --o "*" Panier
    (Pizza, Panier) . ElementPanier

    Commande "*" o- "1..*" Pizza
    (Commande, Pizza) . LigneCommande

    ElementPanier --|> PizzaQuantifiable
    PizzaQuantifiable <|-- LigneCommande
}

CarteCredit "0..2" - "1" Client

Adresse "1..2" --- "*" Commande
Commande "*" --- "1" Client

Client --|> Utilisateur
Responsable <|-- ResponsablePrivilegie
Responsable -l-|> Utilisateur
Livreur -|> Utilisateur
Utilisateur <|-- Pizzaiolo

Responsable "1" - "1" Pizzeria
Pizzeria "1..*" -- "0..7" JourOuvrable

Pizza "1" - "1" AideMemoire
Ingredient "3..*" ---* "1..*" Pizza
Client "1" - "1" Panier
ImagePizza "1..*" --- "1" Pizza

Livraison "1" - "1" Commande
Livraison "*" ----- "1" Livreur

@enduml